--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "super-duper-hepta-journey",
-  "version": "1.0.0",
-  "description": "Some usefile links to help you find what you need.\r - [Check out our Wiki](https://github.com/cheddarmonk/super-duper-hepta-journey/wiki) page\r - [Check out our Proposal](https://github.com/cheddarmonk/super-duper-hepta-journey/blob/main/Proposal.md) page\r - [Check out our Projects](https://github.com/cheddarmonk/super-duper-hepta-journey/projects/1) section.\r - [Check out our Issues](https://github.com/cheddarmonk/super-duper-hepta-journey/issues) section.",
-  "main": "app.js",
-  "dependencies": {
-    "express": "^4.17.1",
-    "mongodb": "^4.1.3",
-    "mongoose": "^6.0.10",
-    "node": "^16.10.0",
-    "nodemon": "^2.0.13"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cheddarmonk/super-duper-hepta-journey.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cheddarmonk/super-duper-hepta-journey/issues"
-  },
-  "homepage": "https://github.com/cheddarmonk/super-duper-hepta-journey#readme"
+    "name": "super-duper-hepta-journey",
+    "version": "1.0.0",
+    "description": "Some usefile links to help you find what you need.\r - [Check out our Wiki](https://github.com/cheddarmonk/super-duper-hepta-journey/wiki) page\r - [Check out our Proposal](https://github.com/cheddarmonk/super-duper-hepta-journey/blob/main/Proposal.md) page\r - [Check out our Projects](https://github.com/cheddarmonk/super-duper-hepta-journey/projects/1) section.\r - [Check out our Issues](https://github.com/cheddarmonk/super-duper-hepta-journey/issues) section.",
+    "main": "app.js",
+    "dependencies": {
+        "express": "^4.17.1",
+        "mongodb": "^4.1.3",
+        "mongoose": "^6.0.10",
+        "node": "^16.10.0",
+        "nodemon": "^2.0.13"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/cheddarmonk/super-duper-hepta-journey.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/cheddarmonk/super-duper-hepta-journey/issues"
+    },
+    "homepage": "https://github.com/cheddarmonk/super-duper-hepta-journey#readme"
 }
